# beam

./: WORKSPACE
model/fn-execution/src/main/proto/: BUILD.bazel  beam_fn_api.proto  beam_provision_api.proto
model/interactive/src/main/proto/: BUILD.bazel  beam_interactive_api.proto
model/job-management/src/main/proto/: BUILD.bazel  beam_artifact_api.proto  beam_expansion_api.proto  beam_job_api.proto
model/pipeline/src/main/proto/: BUILD.bazel  beam_runner_api.proto  external_transforms.proto  metrics.proto  standard_window_fns.proto
