load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "beam_artifact_api_proto",
    srcs = [
        "beam_artifact_api.proto",
    ],
    deps = [
        "//model/pipeline/src/main/proto:beam_runner_api_proto",
    ],
)

proto_library(
    name = "beam_expansion_api_proto",
    srcs = [
        "beam_expansion_api.proto",
    ],
    deps = [
        "//model/pipeline/src/main/proto:beam_runner_api_proto",
    ],
)

proto_library(
    name = "beam_job_api_proto",
    srcs = [
        "beam_job_api.proto",
    ],
    deps = [
        "//model/pipeline/src/main/proto:beam_runner_api_proto",
        "//model/pipeline/src/main/proto:endpoints_proto",
        "//model/pipeline/src/main/proto:metrics_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
